[package]
name = "browser-rs-dioxus-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "html"] }
browser-rs = { path = "../../", features = ["dio"] }
dioxus-logger = "0.6.2"
theme = { version = "0.0.3", features = ["dio"] }
web-sys = "0.3.77"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
